<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Memo Clock</string>
    <string name="title_main">Memo Clock</string>
    <string name="title_regist">Regist</string>
    <string name="alarm">alarm</string>
    <string name="set_alarm">set alarm</string>
    <string name="timer">timer</string>
    <string name="set_timer">set timer</string>
    <string name="regist">regist</string>
    <string name="memo">message</string>
    <string name="time">time</string>
    <string name="dialog_title_alarm">alarm time</string>
    <string name="dialog_title_timer">timer time</string>
    <string name="repeat">repeat</string>
    <string name="snooze">snooze</string>
    <string name="media_file">ringer tone</string>
    <string name="cancel">cancel</string>
    <string name="unset_up">unset up</string>
    <string name="default_time">00:00</string>
    <string name="repeat_unset">unset</string>
    <string name="monday">monday</string>
    <string name="tuesday">tuesday</string>
    <string name="wednesday">wednesday</string>
    <string name="thursday">thursday</string>
    <string name="friday">friday</string>
    <string name="saturday">saturday</string>
    <string name="sunday">sunday</string>
    <string name="snooze_unset">unset</string>
    <string name="snooze_5minute">5min</string>
    <string name="snooze_10minute">10min</string>
    <string name="snooze_15minute">15min</string>
    <string name="snooze_20minute">20min</string>
    <string name="snooze_25minute">25min</string>
    <string name="snooze_30minute">30min</string>
    <string name="timer_repeat_unset">unset</string>
    <string name="timer_repeat_2">2 time</string>
    <string name="timer_repeat_3">3 time</string>
    <string name="timer_repeat_4">4 time</string>
    <string name="timer_repeat_5">5 time</string>
    <string name="timer_repeat_10">10 time</string>
    <string name="timer_repeat_unlimit">unrestricted</string>
    <string name="volume_name">volume</string>
    <string name="vibrator">vibrator</string>
    <string name="invalid_silent_mode">It sounds also with the time of manners</string>
    <string name="button_regist">regist</string>
    <string name="button_cancel">cancel</string>
    <string name="dialog_message_update">is edit</string>
    <string name="dialog_message_delete">is delete</string>
    <string name="dialog_message_on">is ON</string>
    <string name="dialog_message_off">is OFF</string>
    <string name="dialog_message_delete_title">delete</string>
    <string name="dialog_message_delete_conf">Does it delete?</string>
    <string name="dialog_message_yes">yes</string>
    <string name="dialog_message_no">no</string>
    <string name="alarm_snooze">snooze</string>
    <string name="alarm_stop">stop</string>
    <string name="back_main">top</string>
    <string name="exit">exit</string>
</resources>