<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/back_img_repeat">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="1dp"
        android:background="#0000ff">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:background="#00bfff">
            <TextView
                android:id="@+id/space"
                android:layout_width="5dp"
                android:layout_height="fill_parent"
                android:text=""/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_regist"/>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:id="@+id/space"
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:text=""/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">
        <Button
            android:id="@+id/tab_input_alarm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alarm"
            android:textColor="#FFFFFF"
            android:background="@drawable/regist_alarm_button"/>
        <TextView
            android:id="@+id/space"
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:text=""/>
        <Button
            android:id="@+id/tab_input_timer_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timer"
            android:textColor="#FFFFFF"
            android:background="@drawable/regist_timer_button"/>
    </LinearLayout>
    <LinearLayout
        android:layout_height="wrap_content"
        android:id="@+id/input_time_layout"
        android:layout_width="fill_parent">
    </LinearLayout>

    <RelativeLayout
       android:layout_width="fill_parent"
       android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/image_1"
            android:layout_width="fill_parent" android:layout_height="wrap_content"
            android:src="@android:drawable/divider_horizontal_bright"
            android:scaleType="fitXY"
            android:layout_above="@+id/inputListCommon"/>
        <ListView
            android:id="@+id/inputListCommon"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="4dp"
            android:scrollingCache="false"
            android:layout_above="@+id/image_2">
        </ListView>
        <ImageView
            android:id="@+id/image_2"
            android:layout_width="fill_parent" android:layout_height="wrap_content"
            android:src="@android:drawable/divider_horizontal_bright"
            android:scaleType="fitXY"
            android:layout_above="@+id/regist_table"/>
        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/regist_table"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true">
            <TableRow>
                <TextView
                    android:id="@+id/space"
                    android:layout_width="fill_parent"
                    android:layout_height="5dp"
                    android:text=""/>
            </TableRow>
            <TableRow>
                <Button
                    android:id="@+id/regist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:text="@string/button_regist"
                    android:background="@drawable/button"
                    android:textColor="#ffffff"/>
                <TextView
                    android:id="@+id/space"
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:text=""/>
                <Button
                    android:id="@+id/back_main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:text="@string/button_cancel"
                    android:background="@drawable/button"
                    android:textColor="#ffffff"/>
            </TableRow>
        </TableLayout>
    </RelativeLayout>
</LinearLayout>
